--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -8,4 +8,8 @@
     30
   </session-timeout>
 </session-config>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/WEB-INF/test.jsp</location>
+  </error-page>
 </web-app>
