--- a/.gitignore
+++ b/.gitignore
@@ -149,5 +149,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+src/main/webapp/images.*
+
+
 # End of https://www.gitignore.io/api/maven,macos,windows,java-web,intellij# Created by .ignore support plugin (hsz.mobi)
 /.idea/discord.xml
